--- a/skeleton 2/cats.html
+++ b/skeleton 2/cats.html
@@ -8,6 +8,19 @@
 </head>
 
 <body>
+<header class="header">
+  <div class="header-nav container">
+    <h1 class="header-logo"><a href="#">App Academy Friends</a></h1>
+    <nav class="header-list">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">Log out</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
 </body>
 
